--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "core-js": "^2.6.5",
+    "crypto": "^1.0.1",
     "js-md5": "^0.7.3",
     "koa": "^2.7.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
+    "style-loader": "^1.0.0",
     "vant": "^2.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
@@ -26,6 +30,7 @@
     "babel-plugin-import": "^1.12.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.6.10"
   }
 }
